[package]
name = "bankid-rs"
version = "0.1.0"
authors = ["Björn Molin <bjorn.molin@svt.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.3"
log = "0.4"
reqwest = {git="https://github.com/seanmonstar/reqwest", features = ["json"]}
tokio = "=0.2.0-alpha.6"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = {version="1.0", optional = true}
qrcode = "0.11"
image = "0.22"
base64 = "0.10"
uuid = { version = "0.8.1", features = ["serde", "v4"] }    
