[package]
name = "bankid-rs"
version = "0.3.0"
authors = ["Björn Molin <bjorn.molin@motrice.se>"]
edition = "2018"
repository = ""

[dependencies]
pretty_env_logger = "0.4.0"
log = "0.4"
reqwest = { version = "0.10", features = ["gzip", "json", "native-tls", "rustls-tls"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = {version="1.0", optional = true}
qrcode = "0.12"
image = "0.23"
base64 = "0.13  "
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[[example]]
name="hello"

[[example]]
name="hello_env"